--- a/s.css
+++ b/s.css
@@ -35,6 +35,7 @@
     justify-content: space-around;
     align-items: center;
     background-color: rgba(250, 215, 160, 0.993);
+    box-shadow: 5px 7px 8px 6px rgba(14, 13, 13, 0.89);
 
 
 }
