--- a/s.css
+++ b/s.css
@@ -57,7 +57,7 @@ button{
     background-color: rgb(245, 219, 171);
     padding: 2px 10px;
     border-radius: 4px;
-    font-size: 200px;
+    font-size: larger;
 }
 
 .number{
@@ -72,6 +72,7 @@ button{
 .input{
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
     width: 35vw;
 }
 
@@ -91,4 +92,5 @@ button{
 
 .high{
     color: rgb(168, 79, 6);
+    font-size: larger;
 }
