--- a/s.css
+++ b/s.css
@@ -73,7 +73,7 @@ button{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    width: 35vw;
+    width: 100px
 }
 
 .headding{
