--- a/s.css
+++ b/s.css
@@ -25,7 +25,7 @@
 }
 
 .inner{
-    height:76vh;
+    height:clamp(500px,76vh,900px);
     width: 80vw;
     /* margin: 10vh 10%; */
     /* background-image: linear-gradient(rgb(238, 227, 210), rgb(240, 201, 110)); */
@@ -42,8 +42,8 @@
 
 .symbol{
     background-color: rgba(248, 164, 9, 0.993);
-    height: 10vh;
-    width: 7vw;
+    height: 13%;
+    width: clamp(100px,7vw,500px);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -67,13 +67,14 @@ button{
     height: 40px;
     width: 100px;
     margin-right: 4px;
+    font-size: larger;
 }
 
 .input{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    width: 400px
+    width: 300px;
 }
 
 .headding{
@@ -87,7 +88,7 @@ button{
 }
 
 .display{
-    font-size: 20px;
+    font-size: 30px;
 }
 
 .high{
